--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body{
   background-size:cover;
   overflow:hidden;
   color:black;
-  text-shadow:0 0 3px rgba(255,255,255,0.6); /* subtle glow for black text */
+  text-shadow:0 0 3px rgba(255,255,255,0.4);
 }
 
 /* ===== LOADING SCREEN ===== */
@@ -37,7 +37,7 @@ body{
 }
 
 #loadingScreen h1{
-  color:#39ff14; /* neon green */
+  color:#39ff14;
   font-size:50px;
   text-shadow:0 0 10px #39ff14,0 0 20px #39ff14;
   animation: blink 1s infinite;
@@ -51,57 +51,25 @@ body{
 /* ===== TOP MUSIC BAR ===== */
 #musicBar{
   height:50px;
-  background:rgba(255,255,255,0.1); /* subtle transparent */
+  background:rgba(255,255,255,0.1);
   color:black;
   text-align:center;
   line-height:50px;
   cursor:pointer;
   border-bottom:2px solid black;
-  text-shadow:0 0 3px rgba(255,255,255,0.6);
-}
-
-/* ===== PC MODE ===== */
-#pcOverlay{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,0.7);
-  color:black;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  z-index:10;
-}
-
-#pcOverlay h1{
-  font-size:48px;
-  text-shadow:0 0 5px rgba(255,255,255,0.6);
-}
-
-#pcOverlay p{
-  text-shadow:0 0 3px rgba(255,255,255,0.6);
-}
-
-#pcOverlay button{
-  margin-top:20px;
-  padding:10px 25px;
-  background:black;
-  color:black;
-  border:2px solid black;
-  cursor:pointer;
-  text-shadow:0 0 3px rgba(255,255,255,0.6);
+  text-shadow:0 0 3px rgba(255,255,255,0.5);
 }
 
 /* ===== MAIN ===== */
 .main{
   display:flex;
-  height:calc(100vh - 50px);
+  height:100vh;
 }
 
 /* ===== SIDEBAR ===== */
 .sidebar{
   width:260px;
-  background:rgba(255,255,255,0.05); /* almost transparent */
+  background:rgba(255,255,255,0.05);
   padding:20px 10px;
   display:flex;
   flex-direction:column;
@@ -131,17 +99,17 @@ body{
     background: none;
     border: none;
     color:black;
-    text-shadow:0 0 3px rgba(255,255,255,0.6);
+    text-shadow:0 0 2px white;
 }
 
 .text{
   color:black;
   font-weight:bold;
-  text-shadow:0 0 3px rgba(255,255,255,0.6);
+  text-shadow:0 0 2px white;
 }
 
 .item:hover .text{
-  text-shadow:0 0 8px rgba(255,255,255,0.6);
+  text-shadow:0 0 6px white;
 }
 
 /* ===== INFO PANEL ===== */
@@ -150,16 +118,12 @@ body{
   padding:40px;
   background:rgba(255,255,255,0.05);
   color:black;
-  text-shadow:0 0 3px rgba(255,255,255,0.6);
-}
-
-.info h1{
-  color:black;
-  text-shadow:0 0 5px rgba(255,255,255,0.6);
 }
 
 .info p{
-  margin:8px 0;
+  margin:12px 0;
+  font-size:20px; /* bigger font */
+  text-shadow:0 0 4px white; /* subtle glow */
 }
 
 /* ===== BIG BUTTONS ===== */
@@ -173,18 +137,18 @@ body{
   width:220px;
   height:90px;
   background:black;
-  border:2px solid black;
-  color:black;
+  border:2px solid white;
+  color:white;
   display:flex;
   justify-content:center;
   align-items:center;
   font-size:20px;
   cursor:pointer;
-  text-shadow:0 0 3px rgba(255,255,255,0.6);
+  text-shadow:0 0 5px white;
 }
 
 .big-btn:hover{
-  box-shadow:0 0 8px rgba(255,255,255,0.6);
+  box-shadow:0 0 12px white;
 }
 
 /* ===== FUN SCREEN ===== */
@@ -192,13 +156,13 @@ body{
   position:fixed;
   inset:0;
   background:rgba(0,0,0,0.8);
-  color:black;
+  color:white;
   display:none;
   justify-content:center;
   align-items:center;
   font-size:40px;
   z-index:20;
-  text-shadow:0 0 5px rgba(255,255,255,0.6);
+  text-shadow:0 0 8px white;
 }
 
 /* ===== OPINION BOX ===== */
@@ -215,8 +179,9 @@ body{
 #opinionBox form{
   background:black;
   padding:30px;
-  border:2px solid black;
-  color:black;
+  border:2px solid white;
+  color:white;
+  text-shadow:0 0 5px white;
 }
 
 /* ===== RATING ===== */
@@ -224,9 +189,9 @@ body{
   margin-top:25px;
   background:black;
   padding:20px;
-  border:2px solid black;
+  border:2px solid white;
   width:420px;
-  color:black;
+  color:white;
 }
 
 .stars i{
@@ -237,13 +202,13 @@ body{
 
 .stars i.active{
   color:gold;
-  text-shadow:0 0 5px gold;
+  text-shadow:0 0 8px gold;
 }
 
 .rating-info{
   margin-top:10px;
-  color:black;
-  text-shadow:0 0 3px rgba(255,255,255,0.6);
+  color:white;
+  text-shadow:0 0 5px white;
 }
 
 </style>
@@ -259,13 +224,6 @@ body{
 <!-- MUSIC -->
 <div id="musicBar">🎵 Click For Peace Music</div>
 <audio id="music" src="Outdoor.mp3"></audio>
-
-<!-- PC MODE -->
-<div id="pcOverlay">
-  <h1>PC MODE</h1>
-  <p>Menu → Desktop site ON</p>
-  <button onclick="closeOverlay()">Enter</button>
-</div>
 
 <!-- FUN SCREEN -->
 <div id="funScreen">Its Just For Fun 😄</div>
@@ -299,9 +257,9 @@ body{
 </div>
 
 <div class="info">
-  <h1>Hello I Am Mahim</h1>
-  <p>SSC 2027 Batch / Learning Web</p>
-  <p>From Tangail [BD]</p>
+  <p>Hello I Am Mahim - SSC 2027 Batch / So I Create This Web For Learning</p>
+  <p>My Clan Is Kazi - And Muslim / My Dream Is BE Rich And Be BUSINESSMAN</p>
+  <p>I Am From Tangail [Bd] - My Birthday (22 Dec 2008) So Right Now I Am 16</p>
 
   <!-- BIG BUTTONS -->
   <div class="big-buttons">
@@ -339,11 +297,7 @@ let playing=false;
 document.getElementById("musicBar").onclick=()=>{
   playing?music.pause():music.play();
   playing=!playing;
-};
-
-/* ===== PC MODE ===== */
-function closeOverlay(){document.getElementById("pcOverlay").style.display="none";}
-function openLink(url){window.open(url,"_blank");}
+}
 
 /* ===== FUN & OPINION ===== */
 function showFun(){const f=document.getElementById("funScreen"); f.style.display="flex"; setTimeout(()=>f.style.display="none",5000);}
@@ -363,6 +317,9 @@ stars.forEach(star=>{
     document.getElementById("totalStars").innerText=totalStars;
   }
 });
+
+/* ===== OPEN LINKS ===== */
+function openLink(url){window.open(url,"_blank");}
 </script>
 
 </body>
