--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@ body{
   <!-- BIO BLACK BOX -->
   <div class="bio-box">
     <p>Hello I Am Mahim - SSC 2027 Batch / So I Create This Web For Learning</p>
-    <p>My Clan Is Kazi - And Muslim / My Dream Is BE Rich And Be BUSINESSMAN</p>
-    <p>I Am From Tangail [Bd] - My Birthday (22 Dec 2008) So Right Now I Am 16</p>
+    <p>My Clan Is Kazi  / My Youtube I Runned By 2 PERSON - And Muslim / My Dream Is BE Rich And Be BUSINESSMAN</p>
+    <p>I Am From Tangail [Bd] / My HBy Is Editing And Learn Program  - My Birthday (22 Dec 2008) So Right Now I Am 16</p>
   </div>
 
   <!-- BIG BUTTONS -->
